# action_learning

./: .gitignore  AGENTS.md  AI工坊平台设计.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-skeleton-env-verify/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: pyproject.toml
backend/app/: database.py  llm_service.py  main.py  models.py  schemas.py
backend/app/api/: comments.py  health.py  llm.py  matches.py  projects.py  requirements.py  tags.py  utils.py
backend/tests/: test_database_config.py  test_health.py  test_integration.py  test_llm_api.py  test_phase2_api.py  test_phase4_comments_api.py
deploy/: action-learning.service  nginx.conf
docs/: deployment-notes.md
docs/superpowers/plans/: 2026-06-23-phase-2-mvp.md  2026-06-23-phase-3-dashboard.md  2026-06-23-phase-4-details-comments.md  2026-06-24-llm-structured-input.md
docs/superpowers/specs/: 2026-06-23-phase-2-mvp-design.md  2026-06-24-llm-structured-input-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/pages/: AIStructurePanel.tsx  DemoPage.tsx  WorkbenchPage.tsx  aiStructureMapping.ts  aiStructureMapping.typecheck.ts  dashboardStats.ts  dashboardStats.typecheck.ts  llmSettings.typecheck.ts
frontend/src/services/: api.ts  llmSettings.ts
scripts/: deploy-ubuntu.sh  dev.ps1  dev.sh
